test/resources/typer/failing/CallError2.scala
object Call {
    def f(a: Int): Int = {
        a * 2
    }
    f(1) ++ "abc"
}